--- a/Facul/Python/Aula 4/ex002.ipynb
+++ b/Facul/Python/Aula 4/ex002.ipynb
@@ -22,6 +22,105 @@
     "    cont += 1 # Equivalente: cont = cont + 1\n",
     "print('Somatório: {}'.format(soma))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você digitou 1, encerrando...\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input('Digite um valor maior que zero: '))\n",
+    "while (x <= 0):\n",
+    "    x = int(input('Digite um valor maior que zero: '))\n",
+    "print('Você digitou {}, encerrando...' .format(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite uma msg para repetir\n",
+      "Digite sair para encerrar\n",
+      "kkk\n",
+      "kkk\n",
+      "kkk\n",
+      "Programa encerrado\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Digite uma msg para repetir')\n",
+    "print(\"Digite sair para encerrar\")\n",
+    "while True:\n",
+    "    texto = input('')\n",
+    "    if texto == 'sair':\n",
+    "        break\n",
+    "    else:\n",
+    "        print(texto)\n",
+    "print('Programa encerrado')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Login realizado com sucesso!\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    login = input(\"Digite seu nome de usuário:\")\n",
+    "    if (login != 'kevinfoda'):\n",
+    "        print('Nome de usúario ou senha incorreto')\n",
+    "        continue\n",
+    "    senha = input('Digite sua senha:')\n",
+    "    if (senha == 'KevinhoFodinha'):\n",
+    "        break\n",
+    "print('Login realizado com sucesso!')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você digitou uma valor diferente de zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome = ''\n",
+    "while not nome:\n",
+    "    nome = input('Digite seu nome:')\n",
+    "valor = int(input('Digite um numero inteiro:' ))\n",
+    "if valor:\n",
+    "    print('Você digitou uma valor diferente de zero')\n",
+    "else:\n",
+    "    print('Você digitou zero')"
+   ]
   }
  ],
  "metadata": {
