--- a/Python/Aula04/ex004.ipynb
+++ b/Python/Aula04/ex004.ipynb
@@ -6,8 +6,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "teste"
+    "tabuada = 1\n",
+    "while tabuada <= 10:\n",
+    "    print('TABUADA DO {}:' .format(tabuada))\n",
+    "    i = 1\n",
+    "    while i <= 10:\n",
+    "        print('{} x {} = {}' .format(tabuada, i, tabuada * i))\n",
+    "        i += 1\n",
+    "    tabuada +=1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TABUADA DO 1:\n",
+      "1 x 1 = 1\n",
+      "1 x 2 = 2\n",
+      "1 x 3 = 3\n",
+      "1 x 4 = 4\n",
+      "1 x 5 = 5\n",
+      "1 x 6 = 6\n",
+      "1 x 7 = 7\n",
+      "1 x 8 = 8\n",
+      "1 x 9 = 9\n",
+      "1 x 10 = 10\n",
+      "TABUADA DO 3:\n",
+      "3 x 1 = 3\n",
+      "3 x 2 = 6\n",
+      "3 x 3 = 9\n",
+      "3 x 4 = 12\n",
+      "3 x 5 = 15\n",
+      "3 x 6 = 18\n",
+      "3 x 7 = 21\n",
+      "3 x 8 = 24\n",
+      "3 x 9 = 27\n",
+      "3 x 10 = 30\n",
+      "TABUADA DO 5:\n",
+      "5 x 1 = 5\n",
+      "5 x 2 = 10\n",
+      "5 x 3 = 15\n",
+      "5 x 4 = 20\n",
+      "5 x 5 = 25\n",
+      "5 x 6 = 30\n",
+      "5 x 7 = 35\n",
+      "5 x 8 = 40\n",
+      "5 x 9 = 45\n",
+      "5 x 10 = 50\n",
+      "TABUADA DO 7:\n",
+      "7 x 1 = 7\n",
+      "7 x 2 = 14\n",
+      "7 x 3 = 21\n",
+      "7 x 4 = 28\n",
+      "7 x 5 = 35\n",
+      "7 x 6 = 42\n",
+      "7 x 7 = 49\n",
+      "7 x 8 = 56\n",
+      "7 x 9 = 63\n",
+      "7 x 10 = 70\n",
+      "TABUADA DO 9:\n",
+      "9 x 1 = 9\n",
+      "9 x 2 = 18\n",
+      "9 x 3 = 27\n",
+      "9 x 4 = 36\n",
+      "9 x 5 = 45\n",
+      "9 x 6 = 54\n",
+      "9 x 7 = 63\n",
+      "9 x 8 = 72\n",
+      "9 x 9 = 81\n",
+      "9 x 10 = 90\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tabuada in range(1, 11, 1):\n",
+    "    print('TABUADA DO {}:'.format(tabuada))\n",
+    "    for i in range(1, 11, 1):\n",
+    "        print('{} x {} = {}' .format(tabuada, i, tabuada * i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -17,7 +105,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.2"
   },
   "orig_nbformat": 4,
