Final da aula 4

--- a/Python/Aula04/ex005.ipynb
+++ b/Python/Aula04/ex005.ipynb
@@ -115,10 +115,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você esta sacando R$186\n",
+      "Cédulas de 100: 1\n",
+      "Cédulas de 50: 1\n",
+      "Cédulas de 20: 1\n",
+      "Cédulas de 10: 1\n",
+      "Cédulas de 5: 1\n",
+      "Cédulas de 1: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "valor = int(input('Digite quanto irá sacar R$:'))\n",
+    "print('Você esta sacando R${}' .format(valor))\n",
+    "while True:\n",
+    "    if valor >= 100:\n",
+    "        cedulas100 = valor // 100\n",
+    "        valor = valor - cedulas100 * 100\n",
+    "        print('Cédulas de 100: {}' .format(cedulas100))\n",
+    "        if not valor:\n",
+    "            break\n",
+    "    if valor >= 50:\n",
+    "        cedulas50 = valor // 50\n",
+    "        valor = valor - cedulas50 * 50\n",
+    "        print('Cédulas de 50: {}' .format(cedulas50))\n",
+    "        if not valor:\n",
+    "            break\n",
+    "    if valor >= 20:\n",
+    "        cedulas20 = valor // 20\n",
+    "        valor = valor - cedulas20 * 20\n",
+    "        print('Cédulas de 20: {}' .format(cedulas20))\n",
+    "        if not valor:\n",
+    "            break\n",
+    "    if valor >= 10:\n",
+    "        cedulas10 = valor // 10\n",
+    "        valor = valor - cedulas10 * 10\n",
+    "        print('Cédulas de 10: {}' .format(cedulas10))\n",
+    "        if not valor:\n",
+    "            break\n",
+    "    if valor >= 5:\n",
+    "        cedulas5 = valor // 5\n",
+    "        valor = valor - cedulas5 * 5\n",
+    "        print('Cédulas de 5: {}' .format(cedulas5))\n",
+    "        if not valor:\n",
+    "            break\n",
+    "    if valor:\n",
+    "        cedulas1 = valor\n",
+    "        print('Cédulas de 1: {}' .format(cedulas1))\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de compras: 1\n",
+      "Dinheiro arrecadado R$0.\n",
+      "Total de compras: 2\n",
+      "Dinheiro arrecadado R$15.\n",
+      "Total de compras: 3\n",
+      "Dinheiro arrecadado R$45.\n",
+      "Total de compras: 4\n",
+      "Dinheiro arrecadado R$75.\n",
+      "Total de compras: 5\n",
+      "Dinheiro arrecadado R$105.\n",
+      "Total de compras: 6\n",
+      "Dinheiro arrecadado R$120.\n",
+      "Total de compras: 7\n",
+      "Dinheiro arrecadado R$135.\n",
+      "Total de compras: 8\n",
+      "Dinheiro arrecadado R$135.\n",
+      "Total de compras: 9\n",
+      "Dinheiro arrecadado R$165.\n",
+      "Total de compras: 10\n",
+      "Dinheiro arrecadado R$195.\n",
+      "Total de compras: 10\n",
+      "Dinheiro arrecadado R$195.\n",
+      "Media de idade: 9.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "qtd = 0\n",
+    "valor = 0\n",
+    "idadetotal = 0\n",
+    "while True:\n",
+    "    idade = input('Bem vindos ao cinema minha pica sua saúde, digite sua idade:')\n",
+    "    if idade == 'sair':\n",
+    "        break\n",
+    "    idade = int(idade)\n",
+    "    qtd += 1\n",
+    "    if idade < 3:\n",
+    "        dinheiro = 0\n",
+    "    else:\n",
+    "        if idade > 12:\n",
+    "            dinheiro = 30\n",
+    "        else:\n",
+    "            dinheiro = 15\n",
+    "    idadetotal += idade\n",
+    "    valor += dinheiro\n",
+    "    print('Total de compras: {}'.format(qtd))\n",
+    "    print('Dinheiro arrecadado R${}.'.format(valor))\n",
+    "idademedia = idadetotal/qtd\n",
+    "print('Total de compras: {}'.format(qtd))\n",
+    "print('Dinheiro arrecadado R${}.'.format(valor))\n",
+    "print('Media de idade: {}'.format(idademedia))\n"
+   ]
   }
  ],
  "metadata": {
